--- a/src/style.css
+++ b/src/style.css
@@ -13,11 +13,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 415px;
+    width: 450px;
     height: 150px;
     background-color: white;
     border-top: 60px;
-    border:#C0C0C0 groove 1px;
+    border:#DCDCDC groove 2px;
 
 }
 
@@ -28,7 +28,7 @@ input{
 
 .botao{
     color: white;
-    background-color: #333333;
+    background-color: #3d3d3d;
     font-size: 20px;
     border: none;
     padding: 5px 20px;
@@ -40,12 +40,12 @@ input{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 395px;
+    width: 430px;
     height: 180px;
     background-color: white;
     padding-left: 20px;
     color: #333333;
-    border:#C0C0C0 groove 1px;
+    border:#DCDCDC groove 2px;
 }
 
 .resposta a{
